Fix not fun on mobile

--- a/css/isthis.css
+++ b/css/isthis.css
@@ -61,9 +61,6 @@ body {
   background-color: #000;
   color: #fff;
   font-family: 'Inter', sans-serif;
-}
-
-#vanta-js {
   position: fixed;
 }
 
